--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<head>
+    <title> Ganesan M | Profile </title>
+    <link rel="stylesheet" href="css/main-page.css">
+</head>
+
+<body class="body">
+
+    <br />
+
+    <div class="body-content">
+
+        <div class="name-div">
+            <h1 class="hello-text">Hello there! 👋, I'M</h1>
+            <h1 class="name-text">Ganesan M</h1>
+            <h4>Full Stack Developer</h4>
+        </div>
+
+    </div>
+    
 
 </body>
+
 </html>
